--- a/src/main/java/eu/doppel_helix/netbeans/mantisintegration/issue/MantisIssuePanel.form
+++ b/src/main/java/eu/doppel_helix/netbeans/mantisintegration/issue/MantisIssuePanel.form
@@ -1247,6 +1247,9 @@
               <SubComponents>
                 <Container class="javax.swing.JPanel" name="notesPanel">
                   <Properties>
+                    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                    </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
 
