--- a/src/main/java/eu/doppel_helix/netbeans/mantisintegration/swing/NoteDisplay.form
+++ b/src/main/java/eu/doppel_helix/netbeans/mantisintegration/swing/NoteDisplay.form
@@ -2,6 +2,9 @@
 
 <Form version="1.5" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="ff" green="ff" red="ff" type="rgb"/>
+    </Property>
     <Property name="alignmentX" type="float" value="0.0"/>
     <Property name="opaque" type="boolean" value="false"/>
   </Properties>
@@ -100,6 +103,9 @@
     <Component class="javax.swing.JTextPane" name="noteTextPane">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="leftPanel.getBackground()" type="code"/>
+        </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
             <EmptyBorder bottom="5" left="5" right="5" top="5"/>
