--- a/src/main/java/eu/doppel_helix/netbeans/mantisintegration/swing/NoteDisplay.form
+++ b/src/main/java/eu/doppel_helix/netbeans/mantisintegration/swing/NoteDisplay.form
@@ -98,6 +98,18 @@
             </Property>
           </Properties>
         </Component>
+        <Component class="javax.swing.JLabel" name="timeTrackingLabel">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.modules.form.editors2.FontEditor">
+              <FontInfo relative="true">
+                <Font bold="false" component="timeTrackingLabel" property="font" relativeSize="true" size="-1"/>
+              </FontInfo>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+              <ResourceString bundle="eu/doppel_helix/netbeans/mantisintegration/swing/Bundle.properties" key="NoteDisplay.timeTrackingLabel.text" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
+            </Property>
+          </Properties>
+        </Component>
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextPane" name="noteTextPane">
